<resources>
    <string name="app_name">CafeteriaAppMUC</string>

    <string name="profile_setup">Profile setup</string>
    <string name="userprofile_prompt">Select university user status</string>
    <string name="saved_profile_key">null</string>
    <string name="saved_profile_default_key">Select user profile</string>
    <string name="save">Save</string>
    <string name="previously_selected_profile">None</string>
    <string name="Prev_selected_profile_display_string">Previously selected profile:</string>
    <string name="Profile_display_string">None</string>
    <string name="Student">Student</string>
    <string-array name="userprofile_arrays">
        <item>Select user group</item>
        <item>Student</item>
        <item>Professor</item>
        <item>Staff</item>
        <item>Researcher</item>
        <item>General Public</item>
    </string-array>

    <string name="title_activity_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--  Food service  -->
    <string name="tv_show_menu_of_the_day">Show menu of the day</string>
    <string name="tv_estimated_time_to_walk">Estimated time to walk: </string>
    <string name="tv_expected_queue_waiting_time">Expected queue waiting time: </string>
    <string name="btn_close">Close map</string>
    <string name="tv_est_time_to_walk_not_available">Estimated time to walk: Not available.</string>
    <string name="tv_menu_of_the_day">Menu of the day</string>
    <string name="cb_show_hidden_dishes">Show hidden dishes</string>
    <string name="tv_add_new_dish">Add new dish</string>
    <string name="tv_no_registered_dishes">There are no registered dishes.</string>
    <string name="tv_opening_hours">Opening hours: </string>

    <!-- add new dish-->
    <string name="tv_new_dish">New dish</string>
    <string name="tv_name">Name:</string>
    <string name="tv_price">Price:</string>
    <string name="tv_description">Description:</string>
    <string name="btn_add_dish">Add dish</string>


    <!-- -->
    <string name="change_campus">Change campus:</string>

    <!-- menu items -->
    <string name="profileItem">Profile</string>
    <string name="mainItem">Main Page</string>

    <!-- Upload photo-->
    <string name="upload_image">Upload Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="edit_name_for_image">Edit name for image</string>
    <string name="preview_image">Preview image</string>
    <string name="profile_selected">Profile selected:</string>
    <string name="save_button">Save</string>
    <string name="photoItem">Photo</string>
    <string name="Upload_new_dish_image">Upload image</string>
    <string name="json_image_name">JSon Image Name</string>
    <string name="imageRandom">something random</string>
    <string name="test_Image">testing image</string>
    <string name="imageShow">testing</string>
    <string name="ImageNameEditText">Edit text name</string>
    <string name="enter_image_name_here">Enter Image Name Here</string>
    <string name="userSelectedTextView">User previously selected as:</string>
    <string name="randomDesc">describing full size image</string>
    <string name="FullImageView">Full image view</string>
    <string name="Share_dish_button">Share</string>
    <string name="Share_foodservice_button">Share</string>
    <string name="dietary_preferences">Dietary preferences:</string>
    <string name="meat">Meat</string>
    <string name="fish">Fish</string>
    <string name="vegitarian">Vegitarian</string>
    <string name="vegan">Vegan</string>
    <string name="save_diet_preferences">Save diet preferences</string>
    <string name="opening_hours">Opening hours:</string>
    <string name="menu_of_the_day">Menu of the day</string>
    <string name="add_new_dish">Add new dish</string>
    <string name="show_hidden_dishes">Show hidden dishes</string>
    <string name="dish">Dish</string>
    <string name="choose">Choose Campus</string>
    <string name="tv_chooselanguage">Choose language:"</string>
    <string name="estimated_time_to_walk">"Estimated time to walk: "</string>
    <string name="expected_queue_waiting_time">"Expected queue waiting time: "</string>
    <string name="show_menu_of_the_day">Show menu of the day</string>
    <string name="new_dish">New dish</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add_dish">Add dish</string>

</resources>

