<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_setup"
        android:textSize="39sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner

        android:id="@+id/spinner_users"
        android:layout_width="242dp"
        android:layout_height="30dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="370dp"
        android:entries="@array/userprofile_arrays"
        android:prompt="@string/userprofile_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="370dp"
        android:text="@string/save"
        android:textColorHighlight="#884747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toEndOf="@+id/spinner_users"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/prevSelected"
        android:layout_width="174dp"
        android:layout_height="27dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="50dp"
        android:text="@string/Prev_selected_profile_display_string"
        app:layout_constraintBottom_toTopOf="@+id/spinner_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prevSelectedDisplay"
        android:layout_width="112dp"
        android:layout_height="19dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Profile_display_string"
        app:layout_constraintBottom_toTopOf="@+id/spinner_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/prevSelected"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/dietaryPref"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="289dp"
        android:text="@string/dietary_preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/meatCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="471dp"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="228dp"
        android:text="@string/meat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/fishCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="179dp"
        android:text="@string/fish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/vegetarianCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="571dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="128dp"
        android:text="@string/vegitarian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/veganCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="309dp"
        android:layout_marginBottom="75dp"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dietButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="59dp"
        android:text="@string/save_diet_preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="118dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="590dp"
        android:text="Choose language:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="185dp"
        android:layout_height="23dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="587dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>