<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/linearlayoutMapFragDirect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <fragment
            android:id="@+id/fragmentMapDirection"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activities.FoodServiceActivity" />

        <Button
            android:id="@+id/btnCloseMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_close"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutFoodserviceActiv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvFoodServiceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOpeningHours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOpeningHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="4dp"
            android:text=""
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/fragmentMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFoodServiceName" />

        <fragment
            android:id="@+id/fragmentMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/tvEstimatedWalkingTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOpeningHours"
            tools:context=".Activities.FoodServiceActivity" />

        <TextView
            android:id="@+id/tvEstimatedWalkingTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:text="@string/tv_estimated_time_to_walk"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tvWaitingTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentMap" />

        <TextView
            android:id="@+id/tvWaitingTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tv_expected_queue_waiting_time"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/lfMenyOfTheDayAndCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEstimatedWalkingTime" />

        <LinearLayout
            android:id="@+id/lfMenyOfTheDayAndCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/rlDishList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWaitingTime"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menuOftheDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_menu_of_the_day"
                android:textColor="@color/colorAccent"
                android:textColorLink="#111B1E"
                android:textSize="20sp"
                android:layout_marginStart="5dp"/>

            <CheckBox
                android:id="@+id/showHiddenDishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_show_hidden_dishes"
                tools:ignore="MissingConstraints"
                android:textSize="15sp"
                android:visibility="invisible"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlDishList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/buttonAddNewDish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lfMenyOfTheDayAndCheckBox"
            android:background="@drawable/border_black">

            <ListView
                android:id="@+id/dishList"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />
            <TextView
                android:id="@+id/tvNoRegisteredDishes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/tv_no_registered_dishes"
                android:textSize="20sp"
                android:visibility="invisible"/>


        </RelativeLayout>


        <Button
            android:id="@+id/buttonAddNewDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="233dp"
            android:layout_marginEnd="35dp"
            android:onClick="goToAddNewDish"
            android:text="@string/tv_add_new_dish"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlDishList" />

        <Button
            android:id="@+id/shareFoodServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="50dp"
            android:text="@string/Share_foodservice_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonAddNewDish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlDishList" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>